# pyiwr

./: .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  License  Makefile  README.md  README.rst  README.txt  authors.rst  pyproject.toml  requirement.txt  requirements.txt  requiremnt.txt  setup.cfg  setup.py  tox.ini
Py-SRT/: __init__.py.py
Py_SRT/: Py_SRT.py  __init__.py  _version_.py  format_transform.py  graphs.py  visualize.py
docs/: Citation.md  Example Notebook 1_pyiwr_Visualization.md  Makefile  Reference.md  acknowledgments  authors.html  conf.py  contributing.html  cookbook.html  cookbook.rst  cookbook1.html  cookbook1.rst  example.md  genindex.html  history.html  index.html  index.md  installation.html  installation.md  make.bat  readme.html  search.html  searchindex.js  sidebar.html  style.css  usage.html  usage.md  usage1.rst  usage2.html
docs/_build/doctrees/: authors.doctree  contributing.doctree  environment.pickle  history.doctree  index.doctree  installation.doctree  readme.doctree  usage.doctree
docs/_build/html/: .buildinfo  authors.html  contributing.html  genindex.html  history.html  objects.inv  readme.html  search.html  searchindex.js
docs/_build/html/_sources/: usage.rst.txt
docs/_sources/: index.rst.txt  installation.rst.txt
documentation/: index.md  installation.md
pyiwr/: __init__.py  _version_.py  analysis.py  format_transform.py  transform.py  utilities.py  version.py  visualize.py
pysrt/: __init__.py.py  pysrt.py
tests/: __init__.py  test_pyiwr.py
