[project]
name = "pyiwr"
description = """pyiwr is a toolkit for IMD weather radar data."""
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["pyiwr"]
authors = [
    {name = "Nitig Singh", email = " "},
    {name = "Vaibhav Tyagi", email = " "},
    {name = "Hamid Ali Syed", email = "syed44@purdue.edu"}
]
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dynamic = ["version", "dependencies", "optional-dependencies", "readme"]

[project.urls]
homepage = "https://nitigsingh.github.io/pyiwr"
documentation = "https://nitigsingh.github.io/pyiwr"
repository = "https://github.com/nitigsingh/pyiwr"
changelog = "https://github.com/nitigsingh/pyiwr/blob/main/docs/history.md"

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=7.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
readme = {file = ["README.md", "docs/history.md"], content-type = "text/markdown"}

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = "requirements_dev.txt"}

[tool.setuptools_scm]
write_to = "pyiwr/version.py"
version_scheme = "guess-next-dev"
fallback_version = "999"

[tool.black]
target-version = ["py39"]
line-length = 88

[tool.ruff]
target-version = "py39"
builtins = ["ellipsis"]
exclude = [
    ".eggs",
    "doc",
]

# E402: module level import not at top of file
# E501: line too long - let black worry about that
# E731: do not assign a lambda expression, use a def
ignore = [
    "E402",
    "E501",
    "E731",
]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # Pyupgrade
    "UP",
]

[tool.ruff.isort]
known-first-party = ["pyiwr"]